Bug 489919 - Prefer usage of Integer.valueOf for org.eclipse.e4.core.di
Change-Id: I3ce69ccb548ae24b968a7b6810891e08d19662c6
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>